--- a/style.css
+++ b/style.css
@@ -72,6 +72,13 @@
   padding: 0;
 }
 
+.board {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 0;
+  margin-right: 0;
+}
+
 body {
   text-align: center;
   font: "courier new", courier, monospace;
